--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/typography.css">
-    <link rel="stylesheet" href="/css/highlight-dark.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/typography.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/highlight-dark.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scaleable=no">
+    <style>
+      body {
+        font-family: "KoHo", sans-serif;
+        background: url("{{ site.baseurl }}/images/grid.svg");
+        background-size: 1.5rem;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
-
       <div>
         <div class="nav">
           <a href="/">início</a>
@@ -23,8 +31,6 @@
         {{ content }}
       </section>
     </div>
-    <footer>
-      &copy; to me
-    </footer>
+    {% include footer.html %}
   </body>
 </html>
