--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/cascadia-code.min.css");
 
-body {
-  font-family: "KoHo", sans-serif;
-  background: url(/images/grid.svg);
-  background-size: 1.5rem;
-  margin: 0;
-}
 .nav {
   display: flex;
   justify-content: flex-end;
@@ -100,4 +94,67 @@ body {
 .post-content {
   background-color: white;
   padding: 0 2rem;
+}
+
+.site-footer {
+  display: flex;
+  background-color: white;
+  padding: 1.5rem;
+}
+
+.footer-col {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.social-links {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  font-size: 2rem;
+}
+
+.social-links i {
+  color: #2e75af;
+}
+
+.pagination {
+  display: flex;
+  margin: 0 auto 2rem;
+  justify-content: center;
+}
+
+.page {
+  width: 1.8rem;
+  height: 1.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  color: #3182ce;
+  border-left: #479de4 1px solid;
+  border-top: #479de4 1px solid;
+  border-bottom: #479de4 1px solid;
+  user-select: none;
+}
+
+.previous {
+  border-top-left-radius: 0.4rem;
+  border-bottom-left-radius: 0.4rem;
+}
+
+.next {
+  border-top-right-radius: 0.4rem;
+  border-bottom-right-radius: 0.4rem;
+  border-right: #479de4 1px solid;
+}
+
+.current {
+  background-color: #3182ce;
+  color: white;
+}
+.disabled {
+  color: #6a9fd1;
+  border-color: #84bbe7;
 }
