--- a/css/main.css
+++ b/css/main.css
@@ -70,11 +70,12 @@
   margin: 0 auto 2rem;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    background-color: white;
 }
 
 .post-header {
   display: flex;
-  align-items: flex-end;
+  align-items: center ;
   justify-content: space-between;
   background-color: black;
   padding: 1rem 2rem;
@@ -89,11 +90,17 @@
 
 .post-info {
   color: white;
+  min-width: 100px;
+  word-break: keep-all;
 }
 
 .post-content {
-  background-color: white;
   padding: 0 2rem;
+}
+.post-footer {  
+  display: flex;
+  padding: 1.5rem;
+  justify-content: center;
 }
 
 .site-footer {
