--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/cascadia-code.min.css");
 
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
 .nav {
   display: flex;
+  position: fixed;
+  right: 0.6rem;
   justify-content: flex-end;
   padding: 0.6rem;
   user-select: none;
 }
+
 .nav a {
   font-size: larger;
   font-weight: bold;
@@ -20,26 +32,29 @@
   color: #3182ce;
 }
 
-.container {
-  width: 1024px;
-  margin: 0 auto;
+.content {
+  height: 100%;
+  max-width: 100vw;
+  padding: 4.5rem 0 0 0;
+  overflow: auto;
 }
 
-.content {
-  width: 45rem;
-  margin: 0 auto;
+.profile-container {
+  display: flex;
 }
 
 .profile {
-  position: relative;
   display: flex;
-  width: 250px;
+  position: relative;
+  width: 16rem;
+  height: 16rem;
   user-select: none;
 }
 
 .bubble {
-  top: 0;
-  left: 0;
+  position: absolute;
+  top: 0%;
+  left: 0%;
   width: 100%;
   animation: spin infinite 15s linear;
   -webkit-user-drag: none;
@@ -66,7 +81,6 @@
 .post-container {
   display: flex;
   flex-direction: column;
-  width: 45rem;
   margin: 0 auto 2rem;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -105,6 +119,7 @@
 
 .site-footer {
   display: flex;
+  width: 100vw;
   background-color: white;
   padding: 1.5rem;
 }
